Fix modal help button alignment

--- a/og_stellar-dark.css
+++ b/og_stellar-dark.css
@@ -597,6 +597,7 @@ input.form-control.note-autocomplete.note-autocomplete-input.aa-input {
 /***modal buttons***/
 button.help-button {
     color: var(--bright-sun);
+    padding: 0;
 }
 button.help-button:hover {
     color: var(--dim-sun);
